@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  samplv1-9999.ebuild:
+  Make sure configure finds qt.
+  Update mime database.
+
 *samplv1-0.3.3 (31 May 2013)
 
   31 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
